Get Travis to stop sending me e-mails on failure for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ before_install:
   - ./install-icc.sh
 script:
   - icc -o test/test test/test.c
+notifications:
+  email:
+    on_success: change
+    on_failure: change
