Try using the full path to build the test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 before_install:
   - ./install-icc.sh
 script:
-  - icc -o test/test test/test.c
+  - /opt/intel/bin/icc -o test/test test/test.c
 notifications:
   email:
     on_success: change
