--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
 before_install:
   - ./install-icc.sh
 script:
+  - which icc
   - /opt/intel/bin/icc -o test/test test/test.c
 notifications:
   email:
