What is in ~/.bin and ~/.local/bin
Apparently Travis doesn't respect .bashrc, so the next idea is creating
symlinks in an existing directory which is already in $PATH.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env:
 before_install:
   - ./install-icc.sh
 script:
-  - cat ~/.bashrc
   - echo $PATH
+  - ls -l /home/travis/.bin /home/travis/.local/bin
   - which icc
   - icc -o test/test test/test.c
 notifications:
