--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - ./install-icc.sh
 script:
   - echo $PATH
-  - ls -l /home/travis/.bin /home/travis/.local/bin
+  - ls -l /home/travis/.local/bin
   - which icc
   - icc -o test/test test/test.c
 notifications:
