--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
 before_install:
   - ./install-icc.sh
 script:
+  - cat $HOME/.local/bin/icc
   - icc -o test/test test/test.c
 notifications:
   email:
