--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ env:
 before_install:
   - ./install-icc.sh
 script:
-  - icc -o test/test test/test.c && ./test/test
+  - source ~/.bashrc
+  - icc -o test/test test/test.c
 notifications:
   email:
     on_success: change
