add tests for C++ and Fortran

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ before_install:
   - ./install-icc.sh
   - source ~/.bashrc
 script:
-  - icc -o test/test test/test.c
+  - icc   -std=c99    test/test.c   -o test/testc
+  - icpc  -std=c++11  test/test.cxx -o test/testcxx
+  - ifort -std08 -fpp test/test.f90 -o test/testf90
 notifications:
   email:
     on_success: change
