add Cilk C test

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,9 @@ script:
   - icc   -std=c99         test/test.c      -o test/testc
   - icpc  -std=c++11       test/test.cxx    -o test/testcxx
   - ifort -std08 -fpp      test/test.f90    -o test/testf90
-  - icpc  -std=c++11  -tbb test/testtbb.cxx -o test/testtbbcxx
-  - ifort -std08 -fpp -mkl test/testmkl.f90 -o test/testmklf90
+  - icc                    test/testcilk.c  -o test/testcilkc
+  - icpc              -tbb test/testtbb.cxx -o test/testtbbcxx
+  - ifort             -mkl test/testmkl.f90 -o test/testmklf90
 notifications:
   email:
     on_success: change
