--- a/.travis.yml
+++ b/.travis.yml
@@ -18,16 +18,16 @@ before_install:
 script:
   # C99 compiler
   - icc   -std=c99          test/test.c       -o test/testc
-  # C++11 compiler
-  - icpc  -std=c++11        test/test.cxx     -o test/testcxx
   # Cilk extensions in C
   - icc                     test/testcilk.c   -o test/testcilkc
-  # MPI-2 library
-  - mpiicc                  test/testmpi.c    -o test/testmpic
   # IPP library in C
   - icc               -ipp  test/testipp.c    -o test/testippc
+  # MPI-2 library
+  #- mpiicc                  test/testmpi.c    -o test/testmpic
+  # C++11 compiler
+  - icpc  -std=c++11        test/test.cxx     -o test/testcxx
   # DAAL library in C++
-  - icpc              -daal test/testdaal.cxx -o test/testdaalcxx
+  #- icpc              -daal test/testdaal.cxx -o test/testdaalcxx
   # TBB library for C++
   #- icpc              -tbb  test/testtbb.cxx  -o test/testtbbcxx
   # Fortran MKL runtime
