--- a/.travis.yml
+++ b/.travis.yml
@@ -20,23 +20,23 @@ before_install:
   - source ~/.bashrc
 script:
   # C99 compiler
-  - icc   -std=c99          test/test.c       -o test/testc
+  - icc    -std=c99          test/test.c       -o test/testc
   # C++11 compiler
-  - icpc  -std=c++11        test/test.cxx     -o test/testcxx
-  # Cilk extensions in C
-  - icc                     test/testcilk.c   -o test/testcilkc
+  - icpc   -std=c++11        test/test.cxx     -o test/testcxx
+  # Cilk extensions in C (on by default)
+  - icc    -std=c99          test/testcilk.c   -o test/testcilkc
   # MPI-2 library
-  - mpiicc                  test/testmpi.c    -o test/testmpic
+  - mpiicc -std=c99          test/testmpi.c    -o test/testmpic
   # IPP library in C
-  - icc               -ipp  test/testipp.c    -o test/testippc
+  - icc    -std=c99    -ipp  test/testipp.c    -o test/testippc
   # DAAL library in C++
-  - icpc              -daal test/testdaal.cxx -o test/testdaalcxx
+  - icpc   -std=c++11  -daal test/testdaal.cxx -o test/testdaalcxx
   # TBB library for C++
-  - icpc              -tbb  test/testtbb.cxx  -o test/testtbbcxx
+  - icpc   -std=c++11  -tbb  test/testtbb.cxx  -o test/testtbbcxx
   # Fortran MKL runtime
-  - ifort             -mkl  test/testmkl.f90  -o test/testmklf90
+  - ifort  -std08      -mkl  test/testmkl.f90  -o test/testmklf90
   # Fortran 90+ compiler
-  - ifort -std08 -fpp       test/test.f90     -o test/testf90
+  - ifort  -std08 -fpp       test/test.f90     -o test/testf90
 notifications:
   email:
     on_success: change
